--- a/styles/styles.css
+++ b/styles/styles.css
@@ -277,6 +277,23 @@ a:focus-visible {
 
 .inner-subscribe input {
   background-color: #F2F2F2;
+  transition: all .2s ease-in-out;
+}
+
+.subscribe__form input:hover, .subscribe__form input:focus {
+  background-color: #F2F2F2;
+}
+
+.inner-subscribe input:hover, .inner-subscribe input:focus {
+  background-color: #E6E6E6;
+}
+
+.subscribe__form input:disabled {
+  color: rgba(0, 0, 0, 0.3);
+}
+
+.subscribe__form input:invalid {
+  color: #FF5757;
 }
 
 .advantages__title {
@@ -442,9 +459,71 @@ a:focus-visible {
   margin-bottom: 32px;
 }
 
-.catalog-filter__item input {
+.catalog-filter__item:not(:last-child) {
+  margin-bottom: 16px;
+}
+
+.control {
   font-size: 18px;
   line-height: 23px;
+  position: relative;
+  padding-left: 36px;
+  transition: all .2s ease-in-out;
+}
+
+.control__mark {
+  position: absolute;
+  top: 2px;
+  left: 0;
+  width: 20px;
+  height: 20px;
+  background: #fff;
+}
+
+.catalog-filter__list--checkbox .control__mark {
+  border-radius: 4px;
+}
+
+.catalog-filter__list--radio .control__mark {
+  border-radius: 50%;
+}
+
+.control:hover {
+  opacity: 0.6;
+}
+
+.control:focus {
+  outline: none;
+}
+
+.control:focus .control__mark {
+  outline: 3px solid #83B3D3;
+}
+
+.control:active {
+  opacity: 0.3;
+}
+
+.catalog-filter__list--checkbox .control__input[type="checkbox"]:checked + .control__mark::before {
+  background-image: url("../images/icons/icon_tick.svg");
+  width: 12px;
+  height: 10px;
+  position: absolute;
+  top: 5px;
+  left: 4px;
+  content: "";
+
+}
+
+.catalog-filter__list--radio .control__input[type="radio"]:checked + .control__mark::before {
+  border-radius: 50%;
+  background: #3F5E72;;
+  width: 10px;
+  height: 10px;
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  content: "";
 }
 
 .price-input {
@@ -452,13 +531,52 @@ a:focus-visible {
   font-size: 18px;
   line-height: 24px;
   color: #000;
+  padding: 12px 20px;
+  border-style: none;
+  outline-offset: 0;
+  outline: none;
+  background: #fff;
+  transition: all .2s ease-in-out;
+}
+
+.price-input:hover {
+  background: #E6E6E6;
+}
+
+.price-input:focus {
+  outline: 3px solid #83B3D3;
+}
+
+.price-input:active {
+  outline: 3px solid #000;
+}
+
+.price-input::placeholder{
+  color: rgba( 0 0 0 0.6)
+}
+
+.price-input:nth-of-type(1) {
+  border-radius: 4px 0 0 4px;
+  margin-right: 2px;
+}
+
+.price-input:nth-of-type(2) {
+  border-radius: 0 4px 4px 0;
 }
 
 .catalog-filter__cost {
-  color: #333;
-  padding: 12px;
-  background: #fff;
-  display: inline-block;
+  color: rgba(0, 0, 0, 0.4);
+  position: absolute;
+}
+
+.catalog-filter__cost:nth-of-type(1) {
+  left: 92px;
+  top: 12px;
+}
+
+.catalog-filter__cost:nth-of-type(2) {
+  right: 20px;
+  top: 12px;
 }
 
 .select-control {
@@ -615,7 +733,7 @@ a:focus-visible {
 .subscribe__form input {
   font-size: 18px;
   line-height: 24px;
-  color: #333;
+  color: #000;
   width: 452px;
   border-bottom-left-radius: 4px;
   border-top-left-radius: 4px;
@@ -626,6 +744,11 @@ a:focus-visible {
   border-style: none;
   outline-offset: 0;
   outline: none;
+  transition: all .2s ease-in-out;
+}
+
+.subscribe__form input::placeholder {
+color: rgba(0, 0, 0, 0.6)
 }
 
 .inner-subscribe input {
@@ -1096,4 +1219,58 @@ a:focus-visible {
   fill: #a1a1a1;
 }
 
+.catalog-filter__wrapper-inputs {
+  margin-bottom: 36px;
+  display: flex;
+  position: relative;
+}
 
+.catalog-filter__range-scale {
+  position: relative;
+  height: 4px;
+  margin-bottom: 16px;
+  background-color: #5e676d;
+  border-radius: 2px;
+}
+
+.catalog-filter__range-bar {
+  position: absolute;
+  height: 4px;
+  background-color: #fff;
+}
+
+.catalog-filter__range-toggle {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  top: -8px;
+  transition: all .2s ease-in-out;
+}
+
+.catalog-filter__range-toggle:hover {
+  background: #E6E6E6;
+}
+
+.catalog-filter__range-toggle:active,
+.catalog-filter__range-toggle:focus {
+  outline: 2px solid #68A2CA;
+  background: #E5E5E5;
+}
+
+.catalog-filter__range-toggle--toggle-min {
+  left: 0;
+}
+
+.catalog-filter__range-toggle--toggle-max {
+  left: 186px;
+}
+
+.price-input::-webkit-outer-spin-button,
+.price-input::-webkit-inner-spin-button {
+  appearance: none;
+  margin: 0;
+}
