--- a/styles/styles.css
+++ b/styles/styles.css
@@ -48,7 +48,6 @@ h3 {
 
 p {
   margin: 0;
-  margin-bottom: 10px;
 }
 
 a:focus-visible {
@@ -349,9 +348,10 @@ a:focus-visible {
   row-gap: 4px;
   margin-bottom: 23px;
   align-items: center;
+  position: relative;
 }
 
-.popup-allow, .popup-error {
+.popup__allow, .popup__error {
   grid-column: 2/2;
 }
 
@@ -361,29 +361,44 @@ a:focus-visible {
   border-radius: 4px;
   border-style: none;
   outline-offset: 0;
-  outline: none;
+  outline: 3px solid transparent;
+  transition: all .2s ease-in-out;
+}
+
+.popup__input-number:hover {
+  background: #E6E6E6;
+}
+
+.popup__input-number:focus  {
+  outline: 3px solid #83B3D3;
+  background: #E6E6E6;
+}
+
+.popup__input-number:active  {
+  outline: 2px solid #000;
 }
 
 .popup__input-amount-container {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 48px;
+  margin-bottom: 32px;
+  flex-wrap: wrap;
 }
 
 .popup__amount-row {
   display: flex;
   align-items: center;
+  margin-bottom: 16px;
 }
 
-.popup__amount-row input {
-  width: 110px;
-  padding: 14px 10px;
-  background: #F2F2F2;
-  border-radius: 4px;
+.popup__input {
+  width: 30px;
   border-style: none;
   outline-offset: 0;
-  outline: none;
+  outline: 3px solid transparent;
   box-sizing: border-box;
+  background: inherit;
+  text-align: center;
 }
 
 .popup__amount-row label {
@@ -391,42 +406,84 @@ a:focus-visible {
 }
 
 
-.popup-form label {
+.popup__form label {
   font-size: 20px;
   line-height: 24px;
   font-weight: 700;
   display: block;
 }
 
-.popup-form input {
+.popup__form input {
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
 }
 
-.popup-error {
+.popup__error {
   font-size: 16px;
   line-height: 21px;
   color: #FF5757;
+  display: none;
 }
 
-.popup-allow {
+.popup__allow {
   font-size: 16px;
   line-height: 21px;
   color: #333333;
+  display: none;
 }
 
-.tooltip-img {
-  cursor: pointer;
-  vertical-align: bottom;
+.popup-notification-toggle {
+  display: block;
 }
 
-.tooltip-hidden-text {
+.tooltip__text {
   font-size: 16px;
   line-height: 20px;
   color: #fff;
   background-color: #333333;
   display: none;
+  position: absolute;
+  padding: 15px 18px 18px 22px;
+  border-radius: 10px;
+  box-sizing: border-box;
+  width: 256px;
+  font-weight: 400;
+  top: 43px;
+  right: -110px;
+  transition: all .2s ease-in-out;
+}
+
+.tooltip__text:before {
+  content: '';
+  width: 20px;
+  height: 20px;
+  transform: rotate(45deg);
+  background: #333333;
+  position: absolute;
+  top: -9px;
+  left: 122px;
+}
+
+.tooltip {
+  position: relative;
+}
+
+.tooltip-img {
+  vertical-align: bottom;
+  fill: #83B3D3;
+  transition: all .2s ease-in-out;
+}
+
+.tooltip-img:hover {
+  fill: #68A2CA;
+}
+
+.tooltip__button {
+  cursor: pointer;
+  outline: none;
+  border: none;
+  background: transparent;
 }
 
 .inner-header {
@@ -980,15 +1037,15 @@ color: rgba(0, 0, 0, 0.6)
   background-color: #fff;
 }
 
-.popup-form {
+.popup__container {
   width: 717px;
-  margin: 0 auto;
   text-align: left;
   padding: 64px 70px;
   position: relative;
   border-radius: 30px;
   background-color: #fff;
   box-sizing: border-box;
+  margin: auto;
 }
 
 .close-button {
@@ -996,7 +1053,19 @@ color: rgba(0, 0, 0, 0.6)
   top: 64px;
   right: 70px;
   cursor: pointer;
+  border: none;
+  background: transparent;
+  border-radius: 50%;
+  padding: 0;
+  width: 52px;
+  height: 52px;
 }
+
+.close-button:focus {
+  outline: 3px solid #83B3D3;
+}
+
+
 
 .advantages__wrapper, .advantages__item--wrapper {
   padding: 92px 85px;
@@ -1273,4 +1342,93 @@ color: rgba(0, 0, 0, 0.6)
 .price-input::-webkit-inner-spin-button {
   appearance: none;
   margin: 0;
+}
+
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(242, 242, 242, 0.8);
+  z-index: 999999999;
+  display: flex;
+}
+
+.popup--hidden {
+  display: none;
+}
+
+.popup__input::-webkit-outer-spin-button,
+.popup__input::-webkit-inner-spin-button {
+  appearance: none;
+  margin: 0;
+}
+
+.popup__input-number-container::after {
+  content: '';
+  background: url("../images/icons/icon_date.svg");
+  width: 20px;
+  height: 20px;
+  background-repeat: no-repeat;
+  position: absolute;
+  right: 20px;
+  top: 14px;
+}
+
+.tooltip__button:hover + .tooltip__text,
+.tooltip__button:focus + .tooltip__text {
+  display: block;
+}
+
+.popup__input-area {
+  display: flex;
+  width: 110px;
+  padding: 14px 10px;
+  background: #F2F2F2;
+  border-radius: 4px;
+  justify-content: space-between;
+  box-sizing: border-box;
+  align-items: center;
+  transition: all .2s ease-in-out;
+}
+
+.popup__input-area-button{
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  width: 14px;
+  height: 14px;
+  background: transparent;
+  border: none;
+  border-radius: 4px;
+}
+
+.popup__input-area:hover {
+  background: #E6E6E6;
+}
+
+.popup__input-area-icon {
+  fill: #756157;
+  fill-opacity: 0.3;
+  transition: all .2s ease-in-out;
+}
+
+.popup__input-area-button:hover .popup__input-area-icon {
+  fill: #000;
+  fill-opacity: 1;
+}
+
+.popup__input-area-button:focus {
+  outline: 3px solid #82B3D3;
+}
+
+.popup__input-area-button:active .popup__input-area-icon {
+  fill-opacity: 0.3;
+}
+
+.popup__input-area:focus-within {
+  background: #E6E6E6;
 }
