--- a/styles/styles.css
+++ b/styles/styles.css
@@ -95,7 +95,7 @@ a:focus-visible {
 }
 
 .navigation__user .navigation__link {
-  padding: 19px 0;
+  padding: 19px 12px;
   min-width: 20px;
   min-height: 20px;
 }
@@ -136,7 +136,7 @@ a:focus-visible {
   align-items: center;
   justify-content: center;
   top: 10px;
-  left: 10px;
+  left: 22px;
 }
 
 .navigation__link--active-tab {
@@ -153,11 +153,12 @@ a:focus-visible {
 }
 
 .navigation__user .navigation__item {
-  padding: 0 12px;
+  padding: 0px;
 }
 
 
 .button {
+  font-family: "PT Sans", sans-serif;
   font-size: 16px;
   line-height: 20px;
   font-weight: 700;
@@ -193,6 +194,7 @@ a:focus-visible {
 .button--navigation {
   margin-top: 14px;
   width: 160px;
+  box-sizing: border-box;
 
 }
 
@@ -202,6 +204,7 @@ a:focus-visible {
   font-weight: 700;
   text-transform: uppercase;
   width: 376px;
+  box-sizing: border-box;
   }
 
 .button--popup-submit {
@@ -274,16 +277,7 @@ a:focus-visible {
   color: #333;
 }
 
-.inner-subscribe input {
-  background-color: #F2F2F2;
-  transition: all .2s ease-in-out;
-}
-
 .subscribe__form input:hover, .subscribe__form input:focus {
-  background-color: #F2F2F2;
-}
-
-.inner-subscribe input:hover, .inner-subscribe input:focus {
   background-color: #E6E6E6;
 }
 
@@ -336,10 +330,6 @@ a:focus-visible {
 
 .advantages__item--dark .advantages__title, .advantages__item--dark .advantages__text {
   color: #fff;
-}
-
-.advantages__item--light {
-  background-color: #fff!important;
 }
 
 .popup__input-number-container {
@@ -410,10 +400,12 @@ a:focus-visible {
   font-size: 20px;
   line-height: 24px;
   font-weight: 700;
-  display: block;
+  display: flex;
+  align-items: center;
 }
 
 .popup__form input {
+  font-family: "PT Sans", sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
@@ -446,6 +438,7 @@ a:focus-visible {
   position: absolute;
   padding: 15px 18px 18px 22px;
   border-radius: 10px;
+  box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.3);
   box-sizing: border-box;
   width: 256px;
   font-weight: 400;
@@ -484,8 +477,10 @@ a:focus-visible {
   outline: none;
   border: none;
   background: transparent;
-  width: 13px;
-  height: 13px;
+  width: 26px;
+  height: 26px;
+  padding: 0;
+  margin-left: 10px;
 }
 
 .inner-header {
@@ -523,6 +518,7 @@ a:focus-visible {
 }
 
 .control {
+  font-family: "PT Sans", sans-serif ;
   font-size: 18px;
   line-height: 23px;
   position: relative;
@@ -555,8 +551,18 @@ a:focus-visible {
   outline: none;
 }
 
+.control:hover .control__mark {
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+}
+
 .control:focus .control__mark {
   outline: 3px solid #83B3D3;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+}
+
+.control:active .control__mark {
+  outline: 2px solid #83B3D3;
+  box-shadow: 0px 7px 15px rgba(0, 0, 0, 0.4);
 }
 
 .control:active {
@@ -586,6 +592,7 @@ a:focus-visible {
 }
 
 .price-input {
+  font-family: "PT Sans", sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
@@ -596,6 +603,8 @@ a:focus-visible {
   outline: none;
   background: #fff;
   transition: all .2s ease-in-out;
+  width: 143px;
+  box-sizing: border-box;
 }
 
 .price-input:hover {
@@ -629,7 +638,7 @@ a:focus-visible {
 }
 
 .catalog-filter__cost:nth-of-type(1) {
-  left: 92px;
+  left: 108px;
   top: 12px;
 }
 
@@ -639,15 +648,23 @@ a:focus-visible {
 }
 
 .select-control {
+  font-family: "PT Sans", sans-serif;
   font-weight: inherit;
   font-size: inherit;
   line-height: inherit;
   color: #333;
   padding: 14px 20px;
   border-radius: 4px;
-  background: #E6F0F6;
+  background-color: #fff;
   border: 2px solid #E5E5E5;
   cursor: pointer;
+  width: 292px;
+  box-sizing: border-box;
+  appearance: none;
+  background-image: url("../images/icons/select_arrow.svg");
+  background-repeat: no-repeat;
+  background-position: right 20px center;
+  transition: all .2s ease-in-out;
 }
 
 .select-control:hover {
@@ -718,11 +735,23 @@ a:focus-visible {
 .product-card__stars {
   grid-column: 2/2;
   grid-row: 4/4;
+  width: 140px;
+  display: flex;
+}
+
+.product-card__star {
+  background: url("../images/icons/icon_star.svg");
+  background-repeat: no-repeat;
+  background-position: left center;
+  width: 18px;
+  height: 17px;
+  padding: 8px 0;
+  margin-right: 6px;
 }
 
 .product-card-button__rating {
   color: #333;
-  background: #fff;
+  background: #f2f2f2;
   font-weight: 400;
   grid-column: 3/3;
   justify-self: end;
@@ -747,12 +776,6 @@ a:focus-visible {
   background-color: #7DB54F;
 }
 
-.product-card-button__rating {
-  color: #333;
-  background: #fff;
-  font-weight: 400;
-}
-
 .pagination__link {
   color: #fff;
   width: 60px;
@@ -770,7 +793,12 @@ a:focus-visible {
 
 .pagination__link--current {
   color: #000;
+  background-color: #f2f2f2;
+}
+
+.pagination__link--nolink {
   background-color: #fff;
+  color: #000;
 }
 
 .button--subscribe {
@@ -790,20 +818,22 @@ a:focus-visible {
 }
 
 .subscribe__form input {
+  font-family: "PT Sans", sans-serif;
   font-size: 18px;
   line-height: 24px;
   color: #000;
-  width: 452px;
+  flex-grow: 1;
   border-bottom-left-radius: 4px;
   border-top-left-radius: 4px;
   display: inline-block;
   padding: 12px 20px;
-  background: #fff;
-  border-color: #fff;
+  background: #f2f2f2;
+  border-color: #f2f2f2;
   border-style: none;
   outline-offset: 0;
   outline: none;
   transition: all .2s ease-in-out;
+  box-sizing: border-box;
 }
 
 .subscribe__form input::placeholder {
@@ -813,6 +843,7 @@ color: rgba(0, 0, 0, 0.6)
 .inner-subscribe input {
   background: #F2F2F2;
   border-color: #F2F2F2;
+  transition: all .2s ease-in-out;
 }
 
 .footer__hotline {
@@ -904,16 +935,16 @@ color: rgba(0, 0, 0, 0.6)
 }
 
 .catalog-products {
-  background-color: #E6F0F6;
+  background-color: #fff;
   padding: 50px 70px 60px 70px;
 }
 
 .advantages__item:nth-child(odd) {
-  background-color: rgba(131, 179, 211, 0.12);
+  background-color: rgba(131, 179, 211, 0.2);
 }
 
 .advantages__item:nth-child(even) {
-  background-color: rgba(131, 179, 211, 0.2);
+  background-color: rgba(131, 179, 211, 0.12);
 }
 
 .breadcrumbs__item svg {
@@ -950,6 +981,14 @@ color: rgba(0, 0, 0, 0.6)
 .advantages__list--conditions .advantages__item {
   box-sizing: border-box;
   padding: 80px 85px;
+}
+
+.advantages__list--conditions .advantages__item:nth-child(odd) {
+  background-color: rgba(131, 179, 211, 0.12);
+}
+
+.advantages__list--conditions .advantages__item:nth-child(even) {
+  background-color: #fff;
 }
 
 .search-hotels {
@@ -1048,6 +1087,7 @@ color: rgba(0, 0, 0, 0.6)
   background-color: #fff;
   box-sizing: border-box;
   margin: auto;
+  box-shadow: 0px 25px 50px rgba(0, 0, 0, 0.15);
 }
 
 .close-button {
@@ -1118,13 +1158,17 @@ color: rgba(0, 0, 0, 0.6)
   color: #756157;
 }
 
-.navigation__link:hover .navigation__icon {
- fill: #756157;
-}
-
 .navigation__link:active {
   border-bottom: 2px solid rgba(117, 97, 87, 0.3);
   color: rgba(117, 97, 87, 0.3);
+}
+
+.navigation__link:hover .navigation__icon {
+  fill: #756157;
+}
+
+.navigation__user .navigation__link:hover {
+  border-bottom: 2px solid transparent;
 }
 
 .navigation__link:active .navigation__icon {
