--- a/styles/styles.css
+++ b/styles/styles.css
@@ -116,6 +116,7 @@ a:focus-visible {
 }
 
 .navigation__user {
+  -ms-flex-wrap: nowrap;
   flex-wrap: nowrap;
 }
 
@@ -858,6 +859,8 @@ a:focus-visible {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -916,6 +919,7 @@ a:focus-visible {
   -webkit-transition: all .2s ease-in-out;
   -o-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
