--- a/10/styles/styles.css
+++ b/10/styles/styles.css
@@ -74,7 +74,14 @@ a:focus-visible {
 }
 
 .visually-hidden {
-  display: none;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .page-header {
@@ -106,6 +113,11 @@ a:focus-visible {
 
 .navigation__list:last-child{
   margin-left: auto;
+}
+
+.navigation__user {
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
 }
 
 .navigation__user .navigation__link {
@@ -157,7 +169,7 @@ a:focus-visible {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  top: 13px;
+  top: 12px;
   left: 20px;
 }
 
@@ -324,8 +336,7 @@ a:focus-visible {
   font-size: 24px;
   line-height: 28px;
   text-transform: uppercase;
-  margin-bottom: 60px;
-  position: relative;
+  margin-bottom: 30px;
 }
 
 .advantages__title::after {
@@ -333,17 +344,17 @@ a:focus-visible {
   width: 60px;
   height: 2px;
   background:  rgba(0, 0, 0, 0.3);
-  bottom: -30px;
-  left: 85px;
-  position: absolute;
+  display: block;
+  margin: 30px auto 0;
 }
 
 .advantages__list--conditions .advantages__title {
-  margin-bottom: 30px;
+  margin-bottom: 28px;
 }
 
 .advantages__list--conditions .advantages__title::after {
   width: 0;
+  margin: 0;
 }
 
 .advantages__item--dark .advantages__title::after {
@@ -577,6 +588,7 @@ a:focus-visible {
   font-size: 20px;
   line-height: 24px;
   margin-bottom: 32px;
+  padding: 0;
 }
 
 .catalog-filter__item:not(:last-child) {
@@ -624,11 +636,6 @@ a:focus-visible {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
 }
 
-.control:focus .control__mark {
-  outline: 3px solid #83B3D3;
-  -webkit-box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-}
 
 .control:active .control__mark {
   outline: 2px solid #83B3D3;
@@ -640,6 +647,16 @@ a:focus-visible {
   opacity: 0.3;
 }
 
+.control__input:focus + .control__mark {
+  outline: 3px solid #83B3D3;
+  -webkit-box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+}
+
+.control__input:disabled + .control__mark, .control__input:disabled + .control__mark + .control__label {
+  opacity: 0.3;
+}
+
 .catalog-filter__list--checkbox .control__input[type="checkbox"]:checked + .control__mark::before {
   background-image: url("../images/icons/icon_tick.svg");
   width: 12px;
@@ -648,7 +665,6 @@ a:focus-visible {
   top: 5px;
   left: 4px;
   content: "";
-
 }
 
 .catalog-filter__list--radio .control__input[type="radio"]:checked + .control__mark::before {
@@ -797,8 +813,7 @@ a:focus-visible {
   -ms-grid-column: 2;
   -ms-grid-column-span: 2;
   grid-column: 2/4;
-  -ms-grid-row: 1;
-  grid-row: 1/1;
+  overflow: hidden;
 }
 
 .product-card__title {
@@ -812,8 +827,6 @@ a:focus-visible {
 }
 
 .product-card__type {
-  -ms-grid-row: 2;
-  grid-row: 2/2;
   -ms-grid-column: 2;
   grid-column: 2/2;
 }
@@ -823,15 +836,11 @@ a:focus-visible {
   grid-column: 3/3;
   -ms-grid-column-align: end;
   justify-self: end;
-  -ms-grid-row: 2;
-  grid-row: 2/2;
 }
 
 .product-card__button--primary {
   -ms-grid-column: 2;
   grid-column: 2/2;
-  -ms-grid-row: 3;
-  grid-row: 3/3;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
@@ -841,19 +850,18 @@ a:focus-visible {
   grid-column: 3/3;
   -ms-grid-column-align: end;
   justify-self: end;
-  -ms-grid-row: 3;
-  grid-row: 3/3;
 }
 
 .product-card__stars {
   -ms-grid-column: 2;
   grid-column: 2/2;
-  -ms-grid-row: 4;
-  grid-row: 4/4;
   width: 140px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .product-card__star {
@@ -874,9 +882,8 @@ a:focus-visible {
   grid-column: 3/3;
   -ms-grid-column-align: end;
   justify-self: end;
-  -ms-grid-row: 4;
-  grid-row: 4/4;
   cursor: auto;
+  min-height: 37px;
 }
 
 .product-card__button {
@@ -899,7 +906,7 @@ a:focus-visible {
 
 .pagination__link {
   color: #fff;
-  width: 60px;
+  min-width: 60px;
   display: inline-block;
   border-radius: 4px;
   text-decoration: none;
@@ -908,10 +915,12 @@ a:focus-visible {
   line-height: 20px;
   background-color: #82B3D3;
   text-align: center;
-  padding: 20px 0;
+  padding: 20px 5px;
   -webkit-transition: all .2s ease-in-out;
   -o-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .pagination__link--current {
@@ -1006,10 +1015,6 @@ a:focus-visible {
   transition: all .2s ease-in-out;
 }
 
-.footer__button svg {
-  vertical-align: middle;
-}
-
 .hero {
   color: #000000;
   background-color: rgba(131, 179, 211, 0.5);
@@ -1069,7 +1074,7 @@ a:focus-visible {
   display: inline-block;
   width: 75px;
   height: 72px;
-  margin-bottom: 30px;
+  margin-bottom: 28px;
 }
 
 .advantages__item--house:before {
@@ -1221,8 +1226,7 @@ a:focus-visible {
 .product-list {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fill, 340px);
   gap: 20px;
   margin: 0;
   padding-bottom: 39px;
@@ -1239,96 +1243,79 @@ a:focus-visible {
   display: grid;
   -ms-grid-columns: 19px 150px 150px 19px;
   grid-template-columns: 19px 150px 150px 19px;
-  -ms-grid-rows: 1fr 16px 21px 16px 36px 16px 37px;
-  grid-template-rows: 1fr 21px 36px 37px;
   row-gap: 16px;
   padding: 19px 0;
 }
 
 .product-card > *:nth-child(1) {
-  -ms-grid-row: 1;
   -ms-grid-column: 1;
 }
 
 .product-card > *:nth-child(2) {
-  -ms-grid-row: 1;
   -ms-grid-column: 2;
 }
 
 .product-card > *:nth-child(3) {
-  -ms-grid-row: 1;
   -ms-grid-column: 3;
 }
 
 .product-card > *:nth-child(4) {
-  -ms-grid-row: 1;
   -ms-grid-column: 4;
 }
 
 .product-card > *:nth-child(5) {
-  -ms-grid-row: 3;
   -ms-grid-column: 1;
 }
 
 .product-card > *:nth-child(6) {
-  -ms-grid-row: 3;
   -ms-grid-column: 2;
 }
 
 .product-card > *:nth-child(7) {
-  -ms-grid-row: 3;
   -ms-grid-column: 3;
 }
 
 .product-card > *:nth-child(8) {
-  -ms-grid-row: 3;
   -ms-grid-column: 4;
 }
 
 .product-card > *:nth-child(9) {
-  -ms-grid-row: 5;
   -ms-grid-column: 1;
 }
 
 .product-card > *:nth-child(10) {
-  -ms-grid-row: 5;
   -ms-grid-column: 2;
 }
 
 .product-card > *:nth-child(11) {
-  -ms-grid-row: 5;
   -ms-grid-column: 3;
 }
 
 .product-card > *:nth-child(12) {
-  -ms-grid-row: 5;
   -ms-grid-column: 4;
 }
 
 .product-card > *:nth-child(13) {
-  -ms-grid-row: 7;
   -ms-grid-column: 1;
 }
 
 .product-card > *:nth-child(14) {
-  -ms-grid-row: 7;
   -ms-grid-column: 2;
 }
 
 .product-card > *:nth-child(15) {
-  -ms-grid-row: 7;
   -ms-grid-column: 3;
 }
 
 .product-card > *:nth-child(16) {
-  -ms-grid-row: 7;
   -ms-grid-column: 4;
 }
 
 .product-card__image {
-  margin-bottom: 13px;
+  margin-bottom: 16px;
   -o-object-fit: cover;
   object-fit: cover;
+  display: block;
 }
 
 .pagination {
@@ -1385,6 +1372,7 @@ a:focus-visible {
   padding: 92px 85px;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  width: 33.333333%;
 }
 
 .advantages__item--wrapper {
@@ -1407,7 +1395,7 @@ a:focus-visible {
 }
 
 .catalog-filter__group:nth-child(1) {
-  margin-right: 66px;
+  margin-right: 70px;
 }
 
 .catalog-filter__group:nth-child(3) {
@@ -1810,6 +1798,10 @@ a:focus-visible {
 .advantages__picture {
   -o-object-fit: cover;
   object-fit: cover;
-  max-width: 800px;
-  max-height: 384px;
+  display: block;
+}
+
+.advantages__picture-container {
+  overflow: hidden;
+  width: 66.6666%
 }
