--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,4 @@
+
 @font-face {
   font-family: "PT Sans";
   font-style: normal;
@@ -843,6 +844,11 @@ a:focus-visible {
   grid-column: 2/2;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .product-card__button--secondary {
@@ -850,6 +856,11 @@ a:focus-visible {
   grid-column: 3/3;
   -ms-grid-column-align: end;
   justify-self: end;
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .product-card__stars {
@@ -892,13 +903,6 @@ a:focus-visible {
   width: 140px;
 }
 
-.product-card__button--primary {
-  background-color: #756157;
-}
-
-.product-card__button--secondary {
-  background-color: #82B3D3;
-}
 
 .product-card__button--secondary-favorite {
   background-color: #7DB54F;
@@ -1245,6 +1249,10 @@ a:focus-visible {
   grid-template-columns: 19px 150px 150px 19px;
   row-gap: 16px;
   padding: 19px 0;
+  -ms-grid-row-align: stretch;
+  align-self: stretch;
+  -ms-flex-line-pack: start;
+  align-content: start;
 }
 
 .product-card__image {
