--- a/styles/styles.css
+++ b/styles/styles.css
@@ -40,23 +40,6 @@ body {
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
-h1 {
-  margin: 0;
-}
-
-h2 {
-  margin: 0;
-  margin-bottom: 20px;
-}
-
-h3 {
-  margin: 0;
-}
-
-p {
-  margin: 0;
-}
-
 a:focus-visible {
   outline-color: #83B3D3;
   outline-width: 2px;
@@ -278,6 +261,11 @@ a:focus-visible {
   line-height: 36px;
   font-weight: 700;
   text-transform: uppercase;
+  margin-top: 0;
+}
+
+.count-hotels {
+  margin-bottom: 0;
 }
 
 .intro_title {
@@ -288,10 +276,15 @@ a:focus-visible {
   margin-bottom: 64px;
 }
 
+.search-hotels__title {
+  margin-bottom: 20px;
+}
+
 .intro__subtitle, .search-hotels__description {
   font-size: 22px;
   line-height: 26px;
   color: #333;
+  margin: 0;
 }
 
 .search-hotels__description, .subscribe__text {
@@ -304,12 +297,16 @@ a:focus-visible {
   font-weight: 700;
   color: #fff;
   text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 20px;
 }
 
 .subscribe__text {
   font-size: 22px;
   line-height: 26px;
   color: #fff;
+  margin-top: 0;
+  margin-bottom: 54px;
 }
 
 .inner-subscribe .subscribe__title {
@@ -337,6 +334,7 @@ a:focus-visible {
   font-size: 24px;
   line-height: 28px;
   text-transform: uppercase;
+  margin-top: 0;
   margin-bottom: 30px;
 }
 
@@ -355,22 +353,24 @@ a:focus-visible {
 
 .advantages__list--conditions .advantages__title::after {
   width: 0;
+  height: 0;
   margin: 0;
 }
 
-.advantages__item--dark .advantages__title::after {
+.advantages__item:first-child .advantages__title::after, .advantages__item:last-child .advantages__title::after {
   background:  rgba(255, 255, 255, 0.3);
 }
 
 .advantages__text {
   color: #333;
+  margin: 0;
 }
 
-.advantages__item--dark {
-  background-color: #82B3D3!important;
+.advantages__item--dark .advantages__title, .advantages__item--dark .advantages__title {
+  color: #fff;
 }
 
-.advantages__item--dark .advantages__title, .advantages__item--dark .advantages__text {
+.advantages__item--dark .advantages__text, .advantages__item--dark .advantages__text {
   color: #fff;
 }
 
@@ -565,6 +565,7 @@ a:focus-visible {
   font-size: 60px;
   line-height: 78px;
   margin-bottom: 8px;
+  margin-top: 0;
 }
 
 .breadcrumbs {
@@ -821,6 +822,7 @@ a:focus-visible {
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
+  margin: 0;
 }
 
 .product-card__type, .product-card__price, .product-card__rating {
@@ -1093,10 +1095,6 @@ a:focus-visible {
   background-image: url("../images/icons/icon_souvenir.svg");
 }
 
-.advantages__item:nth-child(odd){
-  background-color: rgba(131, 179, 211, 0.12);
-}
-
 .catalog-products {
   background-color: #fff;
   padding: 50px 70px 60px 70px;
@@ -1108,6 +1106,10 @@ a:focus-visible {
 
 .advantages__item:nth-child(even) {
   background-color: rgba(131, 179, 211, 0.12);
+}
+
+.advantages__item:first-child, .advantages__item:last-child {
+  background: #82B3D3;
 }
 
 .breadcrumbs__item svg {
